@startuml

class ToDoListApplication {
    'methods
    +main(String[]) {static}
    +start(Stage)
}

class ApplicationController {
    'attributes
    -masterList: ToDoList
    -visibleList: List<Item>
    -currentView: int
    -listTable: TableView<Item>
    -descriptionCol: TableColumn<Item, String>
    -dueDateCol: TableColumn<Item, String>
    -completionCol: TableColumn<Item, String>
    -newDescriptionBox: TextArea
    -newDateBox: DatePicker
    -inputErrorLabel: Label
    -editDescriptionBox: TextArea
    -editDateBox: DatePicker
    -completeCheckbox: CheckBox
    -addItemCountLabel: Label
    -editItemCountLabel: Label
    -dateClearCheckbox: CheckBox
    -editInputErrorLabel: Label
    'methods
    -onAddItemPressed(ActionEvent)
    -onDeleteItemPressed(ActionEvent)
    -onDisplayAllPressed(ActionEvent)
    -onDisplayCompletePressed(ActionEvent)
    -onDisplayIncompletePressed(ActionEvent)
    -onEditItemPressed(ActionEvent)
    -resetEditSide()
    -onClearListPressed(ActionEvent)
    -onDownloadListPressed(ActionEvent)
    -onUploadListPressed(ActionEvent)
    -updateTable()
    +initialize(URL, ResourceBundle)
}

class Item {
    'attributes
    -final description: SimpleStringProperty
    -final dueDate: SimpleStringProperty
    -final isComplete: SimpleStringProperty
    -final INC: String {static}
    'methods
    +Item(String, String, String):
    +Item(String, String):
    +Item(String):
    +setIsComplete(boolean)
    +getIsComplete(): String
    +setDescription(String)
    +getDescription(): String
    +setDueDate(String)
    +getDueDate(): String
    +toString(): String
}

class ToDoList {
    'attributes
    -thingsToDo: List<Item>
    'methods
    +ToDoList()
    +getThingsToDo(): List<Item>
    +addToList(String, LocalDate)
    +getCompleteThingsToDo(): List<Item>
    +getIncompleteThingsToDo(): List<Item>
    +editItem(Item, String, LocalDate, boolean)
    +deleteItem(Item)
    +clearList()
    +loadListFromFile(File)
    +saveListToFile(File)
    +toString(): String
    -addItemWithDescAndDate(String, String)
    -addItemOnlyDesc(String description)
    -validateDescriptionLength(String): boolean
}

class ToDoListFileConverter {
    'methods
    +loadListFromFile(File): List<Item>
    +saveListToFile(String, File)
    -csvParser(String): String[]
}


ToDoListApplication -- ApplicationController
ApplicationController -- ToDoList
ToDoList --o ToDoListFileConverter
ToDoList -- Item
@enduml